testdata/asm/invalid/basic_06.zkasm
;;error:3:3-13:unknown function "g"
fn f(x u16) -> (res u16) {
  res = g(x)
  return
}
